add validator and schemathesis library and write more logic for manifest/generate
